# shipping-oracle

./: .gitignore  LICENSE  README.md
.github/workflows/: backend.yml  integration.yml  onchain.yml
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/src/: blockchain.rs  config.rs  fetcher.rs  lib.rs  main.rs  models.rs  scheduler.rs  shipment.rs  submitter.rs  tx3.rs
backend/tests/: integration.rs
diagrams/: c4-container.drawio
onchain/: .gitignore  README.md  aiken.toml
onchain/lib/: types.ak
onchain/validators/: tracking.ak
tx3/: .env.preview  README.md  main.tx3  trix.toml
