[package]
name = "shipping-oracle"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "shipping-oracle"
path = "src/main.rs"

[lib]
name = "shipping_oracle"
path = "src/lib.rs"

[dependencies]
pallas = { version = "1.0.0-alpha.4", features = ["hardano", "phase2"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tokio-cron-scheduler = "0.9"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
hex = "0.4"
tx3-sdk = "0.9.2"
once_cell = "1.21.3"
futures = "0.3.31"
ed25519-dalek = "2.2.0"
